--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".RegisterActivity"
-            android:label="@string/app_name">
+            android:name=".ui.activity.RegisterActivity"
+            android:label="Registreer"></activity>
+
+        <receiver
+            android:name=".util.AlarmReceiver"
+            android:process=":remote" />
+
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:label="Quit Smoking Habits"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:process=":remote" android:name="AlarmReceiver"></receiver>
     </application>
 
 </manifest>
