--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <service android:name=".service.MyFirebaseMessagingService">
@@ -46,8 +47,7 @@
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/cig" />
 
-        <activity
-            android:name=".ui.activity.SelectAppActivity"
+        <activity android:name=".ui.activity.SelectAppActivity"
             android:label="Selecteer een app">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
