--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activity.RegisterActivity"
-            android:label="Registreer" />
+            android:label="Registree" />
 
         <receiver
             android:name=".receiver.AlarmReceiver"
